# SciCompiler-AI-Scientist

./: .env.example  .gitignore  CHANGELOG.md  PLATFORM_ANALYSIS.md  README.md  crp_biosensor_plan_data.json  main.py  package-lock.json  package.json
backend/: .env  .env.example  pyproject.toml
backend/app/: __init__.py  adapters.py  agents.py  litmus_client.py  main.py  orchestrator.py  schemas.py  store.py
backend/app/agents/: __init__.py  budget.py  cro.py  cro_compatibility.py  evidence.py  intake.py  literature_qc.py  plan.py  protocol_retrieval.py  review.py  risk.py  staffing.py  timeline.py  validation.py
backend/app/services/: __init__.py  llm.py  memory.py
backend/data/: feedback.json  feedback_memory.json
backend/data/plans/: 01b67e11-d6fd-4c7e-ac1d-afa8094b73a5.json  03df0fa8-bdad-44be-bb1c-9f622707a92a.json  0469b4e9-2227-4b2b-849b-725cfd0ea901.json  060adaa4-4e2e-4593-85fb-a6704367ad71.json  06f132a9-bd00-43a1-ae75-97a1887ae7c3.json  0745832e-73aa-4fe8-a9cf-7bf9232e3bcc.json  0a32b94b-c97b-44b9-a783-2e3bf9060d75.json  0b01436f-7a82-49e9-a755-dce9de944aec.json  0b4a75cd-41b3-4a3a-a873-3d286e3de31a.json  0bb203ab-b47b-43bf-a7df-ff2c31cea44d.json  (+154 more)
backend/predictivebio_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: fetch_protocols_io_token.py
backend/tests/: test_demo.py  test_staffing_agent.py
core/: llm.py
predictivebio/: Makefile  README.md  docker-compose.yml  pyproject.toml
predictivebio/docs/: agent_contracts.md  architecture.md  data_model.md  product_spec.md
predictivebio/scripts/: dev_setup.sh
(+83 files in other folders)
